Closed
Bug 657197
Opened 14 years ago
Closed 14 years ago
TI: "Assertion failure: bad,"
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gkw, Unassigned)
References
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
|
3.05 KB,
text/plain
|
Details |
(function() {
new function() {
throw [];
}
})()
asserts js debug shell on JM changeset ef1ce31f66b9 with -n at Assertion failure: bad
Comment 1•14 years ago
|
||
When analyzing the properties created when 'new' is called on a script, we assumed that there was a reachable return statement in the script. This may not hold if the script always throws.
http://hg.mozilla.org/projects/jaegermonkey/rev/88112acd3094
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug657197.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•