[INFER] Allow for scripts with no reachable return statement when analyzing 'new' script properties, bug 657197.